--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,8 @@
   
   /* Footer Styles */
   footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #09112a;
+    color: #a7a3a3;
     text-align: center;
     padding: 20px 0;
   }
